compiler/testData/cli/jvm/conflictingOverloads.out
compiler/testData/cli/jvm/conflictingOverloads.kt:1:1: error: 'internal fun a(): kotlin.List<kotlin.Int>' is already defined in root package
fun a(): List<Int> = null!!
^
compiler/testData/cli/jvm/conflictingOverloads.kt:2:1: error: 'internal fun a(): kotlin.List<kotlin.String>' is already defined in root package
fun a(): List<String> = null!!
^
COMPILATION_ERROR
